# calculator_pkg_jsk

./: LICENSE.txt  MANIFEST.in  calc.py  pyproject.toml  requirements_dev.txt  tox.ini
calculator_pkg_jsk/: __init__.py  __main__.py
calculator_pkg_jsk/file_calculator/: file_calculator.py  test_file_calculator.py
scripts/: run.py
