[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "calculator_pkg_jsk"
version = "0.1.0"
dependencies = [
	"tqdm ~= 4.0"
	
]
[project.scripts]
calculator_pkg_jsk = "calculator_pkg_jsk.__main__:main"

[project.optional-dependencies]
test = [
	"types-tqdm",
	"pytest",
	"mypy",
	"ruff",
	"pre-commit",
		"tox"
]
